# Kuma

./: CMakeLists.txt  README.md
include/libavutil/: ffversion.h
src/: app.cpp  video.cpp  video.h
